app/css/style.css
/* CSS for Web Interface */
/*******************/
/***** GLOBAL ******/
/*******************/
@font-face {
    font-family:'monserrat';
    src:url('font/montserrat/montserrat-regular.woff2') format('woff2');
    font-weight:normal;
    font-style:normal;
}
@font-face {
    font-family:'veramono';
    src:url('font/veramono/veramono-roman.woff2') format('woff2');
    font-weight:normal;
    font-style:normal;
}
body, .reset *{
    margin: 0;
    padding: 0;
}
body{
    overflow: hidden;
    font-family: monserrat, sans-serif;
    font-size: 12px;
    color: #484848;
    text-align: left;
    background-color: #e6e6e6;
    background-image: url('img/bg.png');
}
iframe{
    border: none;
}
.hidden{
    display: none !important;
}
.icon-box{
    display: block !important;
    margin-bottom: 5px;
    text-align: center;
}
.info{
    color: #0c85d5;
}
.success{
    color: #36af4e;
}
.warning{
    color: #ffae53;
}
.error{
    color: #d43c30;
}
.info-box,
.success-box,
.warning-box,
.error-box{
    display: block;
    padding: 10px;
    border-radius: 8px;
    margin-top: 20px;
    text-align: center;
}
.info-box{
    background-color: rgba(0, 116, 206, 0.2);
}
.success-box{
    background-color: rgba(185, 236, 179, 0.3);
}
.warning-box{
    background-color: rgba(255, 195, 83, 0.2);
}
.error-box{
    background-color: rgba(236, 208, 187, 0.5);
}

/*********************/
/* PAGE & CONTAINERS */
/*********************/
.section-container{
    /*overflow: hidden;*/
    padding: 10px 0 10px 10px;
    box-sizing: border-box;
    position: relative;
}
.app-container-with-scroller,
.app{
    width: calc(100vw - 250px);
}
.app{
    float: right;
    transition: width 500ms ease-in-out;
    padding: 0;
}

.scroller{
    overflow-x: hidden;
    overflow-y: scroll;
    height: 100%;
}
#header .header,
#logo,
#apptitle,
#header .nav-group,
#header .nav,
#explorer,
.app{
    display: inline-block;
    vertical-align: top;
}
#explorer,
.app{
    height: calc(100vh - 65px);
}

/* compact mode */
.compact-header #explorer,
.compact-header .app{
    height: calc(100vh - 5px);
}

/* box */
.box{
    display: block;
    margin: 20px auto;
    width: 742px;
}
#newsletter-editor,
#newsletter-viewer{
    position: relative;
    padding: 20px;
    max-width: 700px;
    /*z-index: -1;*/
}
#newsletter-editor a.disabled,
#newsletter-builder a.disabled{
    cursor: inherit;
}
#newsletter-viewer,
#newsletter-editor{
    background-color: white;
    border: 1px solid #bebdbd;
    border-radius: 8px;
}
.nav-aside,
#newsletter-builder{
    position: relative;
    border: 1px solid #bebdbd;
    margin-bottom: 10px;
}
/* float box */
.float-box-container{
    position: relative;
}
.with-box-sticky{
    vertical-align: top;
}
.with-box-sticky .box{
    display: inline-block;
}
.float-box{
    position: absolute;
    z-index: 3;
    top: 0;
}
.float-box-fixed{
    position: fixed;
}
.float-box-sticky{
    position: sticky;
    top: 20px;
    height: 0;
    margin-left: -170px;
    z-index: 0;
}
.float-box.attached{
    margin-top: 10px;
}
.float-box-left{
    right: 100%;
    margin-right: 10px;
}
.float-box-right{
    left: 100%;
    margin-left: 10px;
}
.float-box .box-title{
    opacity: 0.7;
}.float-box:hover .box-title{
     opacity: 1;
 }
.float-box .nav .item{
    position: relative;
    width: 100%;
}
.float-box .nav .nav{
    position: absolute;
    left: calc(100% + 10px);
    top: 0;
}
.float-box-left.attached .nav-aside{
    border-right: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
    margin-right: -10px;
    padding-right: 0;
}

.float-box-left.attached .nav-aside > .nav.vertical > .item > .btn{
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
/*
.float-box-left.attached .nav.vertical .btn{
    border-radius: 0;
}
.float-box-left.attached .nav-aside > .nav.vertical > .item:first-child > .btn{
    border-top-left-radius: 5px;
}
.float-box-left.attached .nav-aside > .nav.vertical > .item:last-child > .btn{
    border-bottom-left-radius: 5px;
}
.float-box-left.attached .nav-aside > .nav.vertical .nav.vertical > .item:first-child > .btn{
    border-top-right-radius: 5px;
}
.float-box-left.attached .nav-aside > .nav.vertical .nav.vertical > .item:last-child > .btn{
    border-bottom-right-radius: 5px;
}
/*
#newsletter-builder .float-box-left .components-list > .item:first-child .btn,
#newsletter-builder .float-box-left .components-list > .item:last-child .btn,
*/
/*******************/
/***** HEADER ******/
/*******************/
#header{
    height: 65px;
    white-space: nowrap;
    box-shadow: 0 0 5px #9e9d9d;
    z-index: 1;
    transition: height 250ms linear;
}
.compact-header{
    border-top: 5px #006fb9 solid;
}
.compact-header #header{
    padding: 0;
    height: 0;
}
.compact-header #header .header{
    opacity: 0;
}
.compact-header #header .nav-group{
    position: fixed;
    top: 5px;
    right: 0;
    background-color: #eaeaea;
    padding: 5px 0 5px 10px;
    border-left: 1px solid #bebdbd;
    border-bottom: 1px solid #bebdbd;
    border-bottom-left-radius: 8px;
}
.compact-header #header .nav .btn:not([type="submit"]) .item-text{
    display: none;
}
#newsletter-builder,
.nav-aside,
#header,
#explorer{
    background-color: #eaeaea;
}

#logo,
#apptitle,
#header .header,
#header .nav-group{
    height: 45px;
}
#apptitle{
    max-width: 400px;
    font-size: 16px;
    overflow: hidden;
    text-overflow: ellipsis;
}
#header .nav{
    max-width: 495px;
}
#header .btn{
    display: block;
    max-width: 140px;
    line-height: 15px;
    height: 15px;
    overflow: hidden;
    text-overflow: ellipsis;
    box-sizing: content-box;
}
.header-info:not(#subapptitle){
    line-height: 45px;
}
#header .nav-group{
    float: right;
}
#subapptitle{
    display: block;
    margin-bottom: 12px;
    font-size: 10px;
    font-weight: normal;
}
.last{
    font-weight: lighter;
    font-size: 0.8em;
}
/*
.last-date,
.last-time,
.last-user{
    font-style: italic;
}
/* ... */

